--- a/src/features/history-block/history-block.styles.scss
+++ b/src/features/history-block/history-block.styles.scss
@@ -1,3 +1,5 @@
+@import 'commonStyles/constants';
+
 $gap-between-days: 0.2em;
 
 .container {
@@ -6,6 +8,21 @@ $gap-between-days: 0.2em;
     display: flex;
     flex-wrap: wrap;
     gap: 2em $gap-between-days;
+
+    .day-of-week {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      gap: $gap-between-days;
+      margin-right: 0.5em;
+
+      span {
+        height: calc(0.5rem + 4px);
+        font-size: 0.6em;
+        font-weight: lighter;
+        color: rgba($font-color, 0.8);
+      }
+    }
 
     .month {
       display: flex;
