--- a/src/features/history-block/history-block.styles.scss
+++ b/src/features/history-block/history-block.styles.scss
@@ -54,6 +54,11 @@ $gap-between-days: 0.2em;
             border: 2px solid rgb(51, 255, 0);
             border-radius: 4px;
             background: rgb(51, 255, 0);
+
+            &.empty {
+              background: rgb(189, 189, 189);
+              border: 2px solid rgb(189, 189, 189);
+            }
           }
         }
       }
